# cmake_customs

./: CMakeLists.txt  main.cpp
